# repaint

./: .gitignore  Cargo.toml  README.md  architecture.md  chat.json  design_choices.md
.cargo/: config.toml
doc_assets/: docs-header.html
examples/: hello.rs  hello2.rs  svg.rs
implementations/piet-svg/: Cargo.toml
implementations/piet-svg/examples/: a.rs
implementations/piet-svg/src/: lib.rs
implementations/skia-safe/: Cargo.toml
implementations/skia-safe/examples/: b.rs
implementations/skia-safe/src/: lib.rs  painter.rs
implementations/skia-safe/src/painter/: antialias.rs  blend.rs  drawing.rs  shapes.rs  stroking.rs  transform.rs
repaint/: chat.json
repaint/examples/: hello2.rs  tmp.rs
repaint/src/: canvas.rs  lib.rs  painter.rs  resource.rs
repaint/src/base/: blending.rs  brush.rs  clipping.rs  defs.rs  paint.rs  pen.rs  shapes.rs  transform.rs
repaint/src/base/defs/: antialiasing.rs  colors.rs  linalg.rs  rect.rs
repaint/src/base/shapes/: path.rs  polyline.rs
repaint/src/painter/: methods.rs  text.rs
repaint/src/painter/methods/: blend.rs  (+6 more)
src/: base.rs  canvas.rs  default_painters.rs  docs-header.html  lib.rs  painter.rs  utils.rs
src/base/: blending.rs  clipping.rs  defs.rs  paint.rs  pen.rs  rasterization.rs  shapes.rs  transform.rs
src/base/defs/: colors.rs  linalg.rs  rect.rs
src/base/rasterization/: algorithms.rs
src/base/shapes/: path.rs  polyline.rs
src/default_painters/: svg.rs
src/default_painters/svg/: blend_modes.rs
src/painter/: methods.rs
src/painter/methods/: blend.rs  fill.rs  stroke.rs  transform.rs
(+20 files in other folders)
