[package]
name = "repaint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.1"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc_assets/docs-header.html"]